--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,12 @@ jobs:
     runs-on: macos-14
 
     steps:
+    - name: Select Xcode 16.2
+      run: sudo xcode-select -s /Applications/Xcode_16.2.app
+      
+    - name: Check Xcode version
+      run: xcodebuild -version
+        
     - name: Checkout code
       uses: actions/checkout@v4
 
